# treeward

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  SPEC.md  cliff.toml  dprint.json
.github/workflows/: ci.yml  release-plan-tests.yml
docs/demogif/: demo.tape  generate.sh
lore/: 2026-06-11-traversal-hardening.md  AGENTS.md
plans/: FEC_PLAN.md
src/: checksum.rs  cli.rs  diffing.rs  dir_list.rs  main.rs  status.rs  update.rs  ward.rs  ward_file.rs
src/cli/: help_text.rs
src/status/tests/: basic.rs  mod.rs  mode_and_fingerprint.rs  policy.rs  unix.rs  ward_update.rs
src/util/: escaping.rs  hashing.rs  mod.rs
tests/: init.rs  logging.rs  status.rs  status_integration.rs  update.rs  verify.rs  verify_integration.rs  ward_integration.rs
tests/common/: mod.rs
